Добавлена интеграция с Tag Analytics
- Добавлен клиент TagAnalyticsClient для работы с API аналитики тегов
- Обновлён TagService для получения статистики тегов
- Изменён метод getTagByEvent в TagService для возврата TagWithStatsDto
- Добавлен новый DTO TagWithStatsDto для передачи данных о тегах с их статистикой
- Обновлён mappers для поддержки нового DTO
- Обновлён application.yml для добавления URL сервиса аналитики
