# src/main/java/ru/practicum/eventhub/api/mapper/TagMapper.java
@@ -7,6 +7,8 @@ import org.mapstruct.MappingTarget;
 import ru.practicum.eventhub.api.dto.request.TagCreateDto;
 import ru.practicum.eventhub.api.dto.request.TagUpdateDto;
 import ru.practicum.eventhub.api.dto.response.TagDto;
+import ru.practicum.eventhub.api.dto.response.TagStatsDto;
+import ru.practicum.eventhub.api.dto.response.TagWithStatsDto;
 import ru.practicum.eventhub.domain.model.Tag;
 
 import static org.mapstruct.MappingConstants.ComponentModel.SPRING;
@@ -15,6 +17,8 @@ import static org.mapstruct.NullValuePropertyMappingStrategy.IGNORE;
 @Mapper(componentModel = SPRING)
 public interface TagMapper {
     TagDto toDto(Tag tag);
+
+    TagWithStatsDto toDtoWithStats(Tag tag, TagStatsDto stats);
 
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "version", ignore = true)
